regression/fail/functor-and.sml
functor F () = struct end
and F' () = F ()
